[gd_scene load_steps=17 format=2]

[ext_resource path="res://Jester.tscn" type="PackedScene" id=1]
[ext_resource path="res://King.tscn" type="PackedScene" id=2]
[ext_resource path="res://EnemyGroup.gd" type="Script" id=3]
[ext_resource path="res://PlayerGroup.gd" type="Script" id=4]
[ext_resource path="res://VFX/button-active.png" type="Texture" id=5]
[ext_resource path="res://VFX/button-disabled.png" type="Texture" id=6]
[ext_resource path="res://VFX/button-normal.png" type="Texture" id=7]
[ext_resource path="res://BattleArena.gd" type="Script" id=8]
[ext_resource path="res://SFX/Music/global_game_jam_2024.wav" type="AudioStream" id=9]
[ext_resource path="res://SFX/Music/global_game_jam_2024_victory_stinger.wav" type="AudioStream" id=10]
[ext_resource path="res://Guard.tscn" type="PackedScene" id=11]
[ext_resource path="res://VFX/background.png" type="Texture" id=12]
[ext_resource path="res://VFX/jester-2-Sheet.png" type="Texture" id=13]
[ext_resource path="res://GameFont.tres" type="DynamicFont" id=14]
[ext_resource path="res://Fonts/Hey Comic.ttf" type="DynamicFontData" id=15]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 15 )

[node name="World" type="Node2D"]
position = Vector2( 0, 8 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="BattleArena" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="PlayerGroup" type="Node2D" parent="BattleArena"]
script = ExtResource( 4 )

[node name="Jester" parent="BattleArena/PlayerGroup" instance=ExtResource( 1 )]
position = Vector2( -136, 16 )

[node name="Jester2" parent="BattleArena/PlayerGroup" instance=ExtResource( 1 )]
position = Vector2( -96, 72 )
joke_power = 8
trip_power = 12

[node name="Sprite" parent="BattleArena/PlayerGroup/Jester2" index="0"]
texture = ExtResource( 13 )

[node name="EnemyGroup" type="Node2D" parent="BattleArena"]
script = ExtResource( 3 )

[node name="King" parent="BattleArena/EnemyGroup" instance=ExtResource( 2 )]
position = Vector2( 104, 0 )

[node name="Guard" parent="BattleArena/EnemyGroup" instance=ExtResource( 11 )]
position = Vector2( 24, 40 )

[node name="Guard2" parent="BattleArena/EnemyGroup" instance=ExtResource( 11 )]
position = Vector2( 40, 96 )

[node name="Graveyard" type="Node2D" parent="BattleArena"]

[node name="BattleTheme" type="AudioStreamPlayer" parent="BattleArena"]
stream = ExtResource( 9 )
autoplay = true

[node name="VictoryTheme" type="AudioStreamPlayer" parent="BattleArena"]
stream = ExtResource( 10 )
volume_db = 10.0

[node name="EndMusicTimer" type="Timer" parent="BattleArena"]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Defend" type="TextureButton" parent="CanvasLayer"]
visible = false
margin_left = 896.0
margin_top = 508.0
margin_right = 960.0
margin_bottom = 540.0
disabled = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 5 )

[node name="Label" type="Label" parent="CanvasLayer/Defend"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 14 )
text = "Defend"
align = 1
valign = 1

[node name="Abilities" type="VBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -84.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Joke" type="TextureButton" parent="CanvasLayer/Abilities"]
margin_right = 64.0
margin_bottom = 32.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 5 )

[node name="Label" type="Label" parent="CanvasLayer/Abilities/Joke"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 14 )
text = "Joke"
align = 1
valign = 1

[node name="Trip" type="TextureButton" parent="CanvasLayer/Abilities"]
margin_top = 36.0
margin_right = 64.0
margin_bottom = 68.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 5 )

[node name="Label" type="Label" parent="CanvasLayer/Abilities/Trip"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 14 )
text = "Trip"
align = 1
valign = 1

[node name="EndGameLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -78.0
margin_right = 150.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 1 )
text = "Funny Bunny!"
align = 1

[node name="Replay" type="TextureButton" parent="CanvasLayer"]
unique_name_in_owner = true
margin_left = 448.0
margin_top = 239.0
margin_right = 512.0
margin_bottom = 271.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 5 )

[node name="Label" type="Label" parent="CanvasLayer/Replay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 14 )
text = "Replay"
align = 1
valign = 1

[connection signal="start_enemy" from="BattleArena/PlayerGroup" to="BattleArena/EnemyGroup" method="_on_PlayerGroup_start_enemy"]
[connection signal="start_player" from="BattleArena/EnemyGroup" to="BattleArena/PlayerGroup" method="_on_EnemyGroup_start_player"]
[connection signal="timeout" from="BattleArena/EndMusicTimer" to="BattleArena" method="_on_EndMusicTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/Abilities/Joke" to="BattleArena/PlayerGroup" method="_on_Joke_pressed"]
[connection signal="pressed" from="CanvasLayer/Abilities/Trip" to="BattleArena/PlayerGroup" method="_on_Trip_pressed"]
[connection signal="pressed" from="CanvasLayer/Replay" to="BattleArena" method="_on_Replay_pressed"]

[editable path="BattleArena/PlayerGroup/Jester2"]
